samples/_failures_safe/1761559267_d32843_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5546dc99.c: In function ‘main’:
./samples/SAFE/__tmp_5546dc99.c:168:11: error: expected ‘;’ at end of input
  168 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_5546dc99.c:168:5: error: expected declaration or statement at end of input
  168 |     printf
      |     ^~~~~~
